[FIX] 增加错误提示

--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -904,3 +904,11 @@ error.project.name.update=更新gitlab项目名称失败
 error.container.name.exists=容器名称已存在
 error.container.port.name.illegal=容器端口名称不合法。应该包含0-9a-z以及'-'，不能是纯数字，不能以'-'开头或结尾，不能连续出现'-'
 error.host.user.permission=没权限对主机进行此操作
+error.step.name.already.exists=步骤模板的名称已经存在
+error.create.step.template=创建步骤模板失败
+error.step.template.not.exist=步骤模板分类不存在
+error.delete.step.category.related=步骤分类存在关联步骤，不可删除
+error.step.category.name.already.exists=步骤分类已经存在
+error.pipeline.category.exist=流水线分类已经存在
+error.pipeline.template.is.null=流水线模板为空
+error.pipeline.template.name.exist=流水线模板名称已存在
