--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -908,3 +908,11 @@ error.project.name.update=failed to update gitlab project name
 error.container.name.exists=the container name already exists
 error.container.port.name.illegal=the container port name is illeage.It must contain only alpha-numeric characters (a-z, 0-9), and hyphens (-).It can't only contain number
 error.host.user.permission=You have no permission to perform this operation on the host
+error.step.name.already.exists=Step name already exists
+error.create.step.template=Failed to create step template
+error.step.template.not.exist=Step template category does not exist
+error.delete.step.category.related=The step classification has associated steps and cannot be deleted
+error.step.category.name.already.exists=Step classification already exists
+error.pipeline.category.exist=Pipeline classification already exists
+error.pipeline.template.is.null=Pipeline template is empty
+error.pipeline.template.name.exist= Pipeline template name already exists
