--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -916,3 +916,4 @@ error.step.category.name.already.exists=Step classification already exists
 error.pipeline.category.exist=Pipeline classification already exists
 error.pipeline.template.is.null=Pipeline template is empty
 error.pipeline.template.name.exist= Pipeline template name already exists
+error.job.group.exist=Pipeline template job group name already exists
