--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -912,3 +912,4 @@ error.step.category.name.already.exists=步骤分类已经存在
 error.pipeline.category.exist=流水线分类已经存在
 error.pipeline.template.is.null=流水线模板为空
 error.pipeline.template.name.exist=流水线模板名称已存在
+error.job.group.exist=任务分组名称已存在
