--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -917,3 +917,5 @@ error.pipeline.category.exist=Pipeline classification already exists
 error.pipeline.template.is.null=Pipeline template is empty
 error.pipeline.template.name.exist= Pipeline template name already exists
 error.job.group.exist=Pipeline template job group name already exists
+error.delete.job.group.related=Job group related
+error.delete.builtin.job.template.group=Builtin job template group cannot be deleted
