--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -913,3 +913,5 @@ error.pipeline.category.exist=流水线分类已经存在
 error.pipeline.template.is.null=流水线模板为空
 error.pipeline.template.name.exist=流水线模板名称已存在
 error.job.group.exist=任务分组名称已存在
+error.delete.job.group.related=分组被关联，不能删除
+error.delete.builtin.job.template.group=内置分组不能删除
