[ADD] 添加多语言

--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -915,3 +915,4 @@ error.pipeline.template.name.exist=流水线模板名称已存在
 error.job.group.exist=任务分组名称已存在
 error.delete.job.group.related=分组被关联，不能删除
 error.delete.builtin.job.template.group=内置分组不能删除
+error.general.git.username.or.password.empty=通用git仓库的账户或密码不能为空
