--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -919,3 +919,4 @@ error.pipeline.template.name.exist= Pipeline template name already exists
 error.job.group.exist=Pipeline template job group name already exists
 error.delete.job.group.related=Job group related
 error.delete.builtin.job.template.group=Builtin job template group cannot be deleted
+error.general.git.username.or.password.empty=The account or password for a generic Git repository cannot be empty
