--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -88,6 +88,8 @@ error.app.user.isSkipCheckPermission.get=获取应用用户权限失败
 error.app.user.isSkipCheckPermission.update=更新应用用户权限失败
 error.repository.token.invalid=Git仓库或token无效
 error.repository.empty=Git仓库不允许为空
+error.base.url.must.end=baseUrl必须以/结尾
+error.chart.url.base=应输入Helm仓库主域名
 error.app.service.name.length=应用服务名称长度应该为1-40
 # DevopsServiceController
 error.service.name.check=网络名称检查失败
