[IMP] 添加多语言提示信息

--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -916,3 +916,4 @@ error.general.git.username.or.password.empty=The account or password for a gener
 error.host.app.name.length=The application name length should be in 0 to 128
 error.host.app.code.length=The application code length should be in 0 to 128
 error.host.instance.kill.command.exist=The host instance deletion command does not exist
+error.app.instance.is.associated.with.pipeline=The application has been associated with pipelining
