[IMP] 添加多语言提示信息

--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -917,3 +917,7 @@ error.host.app.name.length=The application name length should be in 0 to 128
 error.host.app.code.length=The application code length should be in 0 to 128
 error.host.instance.kill.command.exist=The host instance deletion command does not exist
 error.app.instance.is.associated.with.pipeline=The application has been associated with pipelining
+error.update.pipeline.docker.deploy.info=Failed to update the docker deployment configuration in pipeline
+error.update.pipeline.jar.deploy.info=Failed to update the jar deployment configuration in pipeline
+error.update.pipeline.custom.deploy.info=Failed to update the custom deployment configuration in pipeline
+error.host.disconnect=The host is disconnected
