--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -921,3 +921,5 @@ error.update.pipeline.docker.deploy.info=Failed to update the docker deployment 
 error.update.pipeline.jar.deploy.info=Failed to update the jar deployment configuration in pipeline
 error.update.pipeline.custom.deploy.info=Failed to update the custom deployment configuration in pipeline
 error.host.disconnect=The host is disconnected
+error.load.host.upgrade.sh=Failed to read the host upgrade command template
+error.load.host.install.sh=Failed to read the host installation command template
