--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -843,6 +843,7 @@ error.unsupported.preprocess.type=Unsupported preprocessing script type {0}
 error.middleware.insert=failed to save middleware info
 error.middleware.unsupported.type=unsupported middleware type {0}
 error.middleware.name.exists=name exists
+error.middleware.code.exists=code exists
 error.middleware.deploy=failed to deploy middleware {0} : {1}
 error.deploy.record.insert=failed to update deployment record status
 error.middleware.redis.sentinel.slave.count=The minimum number of sentinel node is 3
