--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -842,6 +842,7 @@ error.unsupported.preprocess.type=不支持的预处理脚本类型 {0}
 error.middleware.insert=保存中间件信息失败
 error.middleware.unsupported.type=不支持的中间件类型 {0}
 error.middleware.name.exists=名称已存在
+error.middleware.code.exists=编码已存在
 error.middleware.deploy=中间件 {0} 部署失败: {1}
 error.deploy.record.insert=更新部署记录状态失败
 error.middleware.redis.sentinel.slave.count=哨兵节点数量最小为3
